# TCF

./: CMakeLists.txt  README.md  demo.cpp
config/: config_eth.json  config_kitti.json
data/ETH_TLS/facade/: s1_v0.1_sor.pcd  s2-s1.pose  s2-s3.pose  s2_s1_top3.match  s2_s3_top3.match  s2_v0.1_sor.pcd  s3-s1.pose  s3_s1_top3.match  s3_v0.1_sor.pcd
data/KITTI/09/: 1380_v0.3.pcd  1391-1380.pose  1391_1380_top3.match  1391_v0.3.pcd  191_v0.3.pcd  210-191.pose  210_191_top3.match  210_v0.3.pcd  821_v0.3.pcd  833-821.pose  833_821_top3.match  833_v0.3.pcd
registration/: CMakeLists.txt  irls_welsch.cpp  irls_welsch.h  ransac_1pt2pt3pt.cpp  ransac_1pt2pt3pt.h  tcf.cpp  tcf.h
utils/: CMakeLists.txt  for_cloud.cpp  for_cloud.h  for_io.h  for_time.h
